squashing bugs

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,15 @@ img {
   pointer-events: none;
 }
 
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+
 /* Utilities */
 @layer utilities {
   .text-balance {
